# Ignition

./: README.md  pyproject.toml
configs/: sample_config.yaml
ignition/: __init__.py  capture.py  cards.py  cli.py  config.py  decision.py  detection.py  hand_evaluator.py  ocr.py  pipeline.py  poker_assistant.py  postflop.py  range_engine.py  state.py
ignition/data/: preflop_ranges.json
scripts/: run_assistant.py
tests/: test_assistant.py  test_cards.py  test_decision.py  test_postflop.py  test_range_engine.py
