[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ignition-assistant"
version = "0.1.0"
description = "Study-mode poker assistant for Ignition Casino NLHE cash games"
authors = [{ name = "Ignition Assistant" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
